# TFTP-C

./: .drone.yml  .gitignore  CMakeLists.txt  Readme.md
src/common/: tftp.c  tftp.h
src/server/: main.c  tests.c
